--- a/accounts/templates/accounts/email_verification.html
+++ b/accounts/templates/accounts/email_verification.html
@@ -1,22 +1,6 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Whatever Song 이메일 인증</title>
-</head>
-<body>
-    <div class="container">
-        <div class="header">
-            <h1>Whatever Song</h1>
-        </div>
-        <div class="content">
-            <p>안녕하세요 {{ user.username }}님,</p>
-            <p>아래 링크를 클릭하여 이메일 인증을 완료해 주세요:</p>
-            <a href="{{ protocol }}://{{ domain }}{% url 'verify-email' uid token %}" class="button">이메일 인증하기</a>
-        </div>
-        <div class="footer">
-            <p>감사합니다.</p>
-        </div>
-    </div>
-</body>
-</html>
+
+            안녕하세요 {{ user.username }}님
+            아래 링크를 클릭하여 이메일 인증을 완료해 주세요:</p>
+            {{ protocol }}://{{ domain }}{% url 'verify-email' uid token %}" 이메일 인증하기
+            감사합니다
+            
