posts/create 시 링크 없어도 create 가능 / list 페이지네이션 20개 기준 / posts/create, accounts/signup 시 default image 생성 2024.06.05 posts/models.py, accounts/models.py 수정 -> makemigrations 필요 posts/create.js url 조건문 생성 posts/list.html, list.js, views.py pagenation 로직 생성

--- a/posts/templates/posts/create.html
+++ b/posts/templates/posts/create.html
@@ -21,7 +21,7 @@
             </select>
         </div>
         <div class="post">
-            <span id="all-text">노래링크</span><input type="url" id="post-url" placeholder="노래 링크를 넣어주세요" required><br>
+            <span id="all-text">노래링크</span><input type="url" id="post-url" placeholder="노래 링크를 넣어주세요"><br>
         </div>
         <div class="post">
             <span id="all-text">사진</span>
