--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -7,7 +7,7 @@
     <div class="author-create">
         <p id="post-created"></p>
         <p id="post-updated"></p>
-        <p id="post-author"></p>
+        <a id="post-author" href="#"></a>
     </div>
 
     <a href="#" id="update" class="update-link">수정하기</a>
