--- a/posts/templates/posts/list.html
+++ b/posts/templates/posts/list.html
@@ -25,6 +25,11 @@
     <div class="post">
         <div class="content" id="postsList"></div>
     </div>
+    <div id="paginationControls">
+        <button id="prevPage">Previous</button>
+        <span id="pageInfo"></span>
+        <button id="nextPage">Next</button>
+    </div>
 </div>
 <script src="{% static 'posts/js/list.js' %}"></script>
 {% endblock content %}
