playlist 반환 시 개수 증가, post 이미지 업로드 시 상자크기 조절 2024.06.05 1. playlist 반환 값 20 -> 40으로 수정 2. post 게시글 작성 및 수정 시 이미지 이름에 따라 상자크기 변환하는거 고정

--- a/posts/static/posts/css/create.css
+++ b/posts/static/posts/css/create.css
@@ -158,7 +158,8 @@ textarea::placeholder {
 
 /* '선택된 파일 없음' input칸 스타일(파일 이름 보여질 자리)  */
 #file-name{
-    display: flex;
+    display: inline-block;
+    width: 120px;
     justify-content: center;
     font-family: 'SCoreDream-300';
     font-size: 16px;
@@ -168,6 +169,11 @@ textarea::placeholder {
     border: 1px solid;
     border-color: #fff;
     border-radius: 5px;
+
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+    vertical-align: middle; 
 }
 
 
