--- a/posts/templates/posts/update.html
+++ b/posts/templates/posts/update.html
@@ -17,8 +17,10 @@
         </div>
         <div class="post">
             <span id="all-text">사진</span>
-            <span id="file-name">선택된 파일 없음</span>
-            <label for="file-input" class="file-choice-btn">파일 선택</label>
+            <div style="display: flex; align-items: center;">
+                <span id="file-name">선택된 파일 없음</span>
+                <label for="file-input" class="file-choice-btn">파일 선택</label>
+            </div>
             <input type="file" id="file-input" style="display:none;"><br>
         </div>
         <button type="submit">수정</button>
