--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -16,17 +16,18 @@
         <img id="post-img">
     </div>
     <div class="post-link">
-        <a id="post-link" href="#"></a>
+        <a id="post-link" href="#" target="_blank"></a>
     </div>
     <p id="post-content"></p>
     <div class="count">
         <p id='like-count'></p>        
-            <button id="unlike">
-                <div class="post-like2">😍</div>
-            </button>
-            <button id="like" class="like">
-                <div class="post-like1">😞</div>
-            </button>
+        <button id="unlike">
+            <div class="post-like2">😍</div>
+        </button>
+        <button id="like" class="like">
+            <div class="post-like1">😞</div>
+        </button>
+        <p id='comment-count'></p>
         <p id="post-comment"></p>
     </div>
     <form id="comment-form">
