--- a/accounts/static/accounts/css/profile.css
+++ b/accounts/static/accounts/css/profile.css
@@ -98,11 +98,12 @@
 .profile-image img {
     width: 150px;
     height: 150px;
-
+    
     border-radius: 50%;
+    border: solid 1px #fff;
     object-fit: cover;
     display: inline-block; /* 이미지 블록 정렬 */
-    background-color: white;
+    background-color: transparent
 }
 
 .post-wrap{
