--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -9,16 +9,17 @@
         <p id="post-updated"></p>
         <a id="post-author" href="#"></a>
     </div>
-
-    <a href="#" id="update" class="update-link">수정하기</a>
-    
+    <div class="update-delete">
+        <a href="#" id="update" class="update-link">수정하기</a>
+        <button type="button" id="delete-button">삭제하기</button>
+    </div>
     <div class="post-img">
         <img id="post-img">
     </div>
+    <p id="post-content"></p>
     <div class="post-link">
         <a id="post-link" href="#"></a>
     </div>
-    <p id="post-content"></p>
     <div class="count">
         <p id='like-count'></p>        
             <button id="unlike">
