profile image css 수정 2024.06.05 1. profile image 파일 이름에 따라 바뀌는 칸 css 수정

--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -19,8 +19,10 @@
         </div>
         <div class="signup-image-line">
             <span class="signup-text">사진</span>
-            <span id="file-name">선택된 파일 없음</span>
-            <label for="file-input" class="file-choice-btn">파일 선택</label>
+            <div style="display: flex; align-items: center;">
+                <span id="file-name">선택된 파일 없음</span>
+                <label for="file-input" class="file-choice-btn">파일 선택</label>
+            </div>
             <input type="file" id="file-input" style="display:none;"><br>
         </div>
         <div class="signup-btn-line">
