--- a/accounts/static/accounts/css/signup.css
+++ b/accounts/static/accounts/css/signup.css
@@ -122,7 +122,8 @@ input::placeholder {
 
 /* '선택된 파일 없음' input칸 조절(파일 이름 보여질 자리)  */
 #file-name{
-    display: flex;
+    display: inline-block;
+    width: 120px;
     justify-content: center;
     font-family: 'SCoreDream-300';
     font-size: 16px;
@@ -132,6 +133,11 @@ input::placeholder {
     border: 1px solid;
     border-color: #fff;
     border-radius: 5px;
+
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+    vertical-align: middle; 
 }
 
 /* '파일선택'버튼 스타일 조절 */
