post update, create, profile nickname 부분 css 보충 완료 240605 1. 게시글 작성시 내용칸이 좁아 보여서 넓게 수정하고, 그거에 맞춰서 다른 input칸도 수정 2. profile 페이지에서 보이는 닉네임 다른 글씨랑 폰트 같게 수정

--- a/posts/static/posts/css/detail.css
+++ b/posts/static/posts/css/detail.css
@@ -137,13 +137,18 @@ p{
 
 /* 댓글 수, 좋아요 수 글자 조정 및 폰트 조정 */
 .count{
-    font-family: 'SCoreDream-500';
-    font-size: 18px;
+    font-family: 'SCoreDream-400';
+    font-size: 22px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     margin: 0 50px 10px 50px;
     position: relative;
+}
+
+#comment-count{
+    font-size: 22px;
+    margin-left: 20px;
 }
 
 #like-count{
