--- a/posts/static/posts/css/create.css
+++ b/posts/static/posts/css/create.css
@@ -39,7 +39,7 @@
     color: #fff;
     display: flex;
     flex-direction: column;
-    width: 650px;
+    width: 60%;
     height: 100%;
     background-color : rgba(0, 0, 0, 0.075);
     border-radius: 10px;
@@ -105,7 +105,7 @@ input {
     font-size: 20px;
     margin: 0 10px;
     padding: 10px;
-    width: 60%;
+    width: 70%;
 }
 
 
@@ -118,7 +118,8 @@ textarea {
     font-size: 20px;
     margin: 0 10px;
     padding: 10px;
-    width: 60%;
+    width: 70%;
+    height: 250px;
 }
 
 
@@ -132,7 +133,7 @@ select{
     font-size: 16px;
     margin: 0 10px;
     padding: 10px;
-    width: 64%;
+    width: 73%;
 }
 
 
@@ -158,8 +159,8 @@ textarea::placeholder {
 
 /* '선택된 파일 없음' input칸 스타일(파일 이름 보여질 자리)  */
 #file-name{
-    display: inline-block;
-    width: 120px;
+    display: flex;
+    width: 316px;
     justify-content: center;
     font-family: 'SCoreDream-300';
     font-size: 16px;
@@ -198,7 +199,7 @@ font-family: 'SCoreDream-400';
     border-color: #fff;
     border-width: 1px;
     border-radius: 5px;
-    margin: 10px 0 50px 520px;
+    margin: 10px 0 50px 700px;
     padding: 5px 10px;
     width: 10%
 }
