post 수정 시 노래 링크 안넣어도 수정되게끔 변경 2024.06.07

--- a/posts/templates/posts/update.html
+++ b/posts/templates/posts/update.html
@@ -13,7 +13,7 @@
             <span id="all-text">내용</span><textarea id="post-content" rows="4" cols="50" ></textarea><br>
         </div>
         <div class="post">
-            <span id="all-text">노래링크</span><input type="url" id="song-link" required><br>
+            <span id="all-text">노래링크</span><input type="url" id="song-link"><br>
         </div>
         <div class="post">
             <span id="all-text">사진</span>
