--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'accounts/css/main.css' %}">
-<img class="main_logo" src="{% static 'accounts/css/main logo.png' %}" alt="">
+<img class="main_logo" src="{% static 'accounts/main logo.png' %}" alt="">
 
 
 {% endblock content %}
