interceptor 로직 수정, playlist url 수정, post url 수정 2024.06.07

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
             </div>
             <div class="service">
                 <a href="/api/coach/">Coach service</a>
-                <a href="/api/playlist/">Playlist</a>
+                <a href="/api/playlist/list/">Playlist</a>
                 <a href="/api/posts/list/">Community</a>
             </div>
             <div class="accounts">
