--- a/posts/templates/posts/list.html
+++ b/posts/templates/posts/list.html
@@ -26,9 +26,9 @@
         <div class="content" id="postsList"></div>
     </div>
     <div id="paginationControls">
-        <button id="prevPage">Previous</button>
+        <button id="prevPage">◀ Prev</button>
         <span id="pageInfo"></span>
-        <button id="nextPage">Next</button>
+        <button id="nextPage">Next ▶</button>
     </div>
 </div>
 <script src="{% static 'posts/js/list.js' %}"></script>
