--- a/posts/static/posts/css/detail.css
+++ b/posts/static/posts/css/detail.css
@@ -237,13 +237,14 @@ textarea::placeholder {
 
 /* 댓글 프사 */
 .comment-wrap img{
-    width: 100%;
+    width: 90%;
     border-radius: 70%;
 }
 
 
 .comment-wrap a{
-    width: 12%;
+    width: 11%;
+    margin-right: 20px;
 }
 
 .author-update-delete{
