--- a/posts/static/posts/css/list.css
+++ b/posts/static/posts/css/list.css
@@ -153,3 +153,42 @@ img{
     font-family: 'SCoreDream-400';
     margin-right: 15px;
 }
+
+#paginationControls{
+    color: #fff;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+#prevPage{
+    font-family: 'SCoreDream-400';
+    font-size: 14px;
+    background-color: rgba(255, 255, 255, 0);
+    color: #fff;
+    border-color: #fff;
+    border-width: 1px;
+    border-radius: 5px;
+    padding: 6px 12px;
+    width: 8%
+}
+
+
+#pageInfo{
+    margin: 0 10px;
+}
+
+#nextPage{
+    font-family: 'SCoreDream-400';
+    font-size: 14px;
+    background-color: rgba(255, 255, 255, 0);
+    color: #fff;
+    border-color: #fff;
+    border-width: 1px;
+    border-radius: 5px;
+    padding: 6px 12px;
+    width: 8%
+}
