--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -29,7 +29,7 @@
             <input type="email" id="email" name="email" placeholder="이메일을 입력해주세요" required><br>
         </div>
         <div class="email-btn">
-            <button type="button" onclick="sendVerificationEmail()">이메일 인증</button>
+            <button type="button" id="emailvarification">이메일 인증</button>
         </div>
         <div class="signup-btn-line">
             <button type="submit">Signup</button>
