이메일인증로컬확인 2024.06.09

--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{% static 'accounts/css/signup.css' %}">
 <div class="signup-form">
     <p>Signup</p>
-    <form id="signup-form" method="post" enctype="multipart/form-data">
+    <form id="signup-form" method="post" enctype="multipart/form-data" novalidate>
         {% csrf_token %}
         <div class="signup">
             <span class="signup-text">아이디</span>
@@ -29,7 +29,7 @@
             <input type="email" id="email" name="email" placeholder="이메일을 입력해주세요" required><br>
         </div>
         <div class="email-btn">
-            <button type="button" id="emailvarification">이메일 인증</button>
+            <button type="button" id="email-verification-btn">이메일 인증</button>
         </div>
         <div class="signup-btn-line">
             <button type="submit">Signup</button>
@@ -39,5 +39,4 @@
 </div>
 
 <script src="{% static 'accounts/js/signup.js' %}"></script>
-
 {% endblock content %}
