--- a/accounts/templates/accounts/email_verification.html
+++ b/accounts/templates/accounts/email_verification.html
@@ -1,8 +1,16 @@
-
-            안녕하세요 {{ user.username }}님
-            아래 링크를 클릭하여 이메일 인증을 완료해 주세요
-            {{ protocol }}://{{ domain }}{% url 'verify-email' uid64=uid token=token %}" 이메일 인증하기
-            
-            
-            감사합니다
-            
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Email Verification</title>
+</head>
+<body>
+    <p>안녕하세요, {{ user.username }}님!</p>
+    <p>이메일 인증을 위해 아래 링크를 클릭해주세요:</p>
+    <p>
+        <a href="{{ protocol }}://{{ domain }}/verify-email/{{ uid }}/{{ token }}">이메일 인증하기</a>
+    </p>
+    <p>감사합니다!</p>
+</body>
+</html>
