--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -7,7 +7,7 @@
 
 <div id="profile-container">
     <div class="profile-image">
-        <img id="profile-picture" alt="Profile Picture">
+        <img id="profile-picture" alt="Profile Picture" src="{% static 'logo.png' %}">
     </div>
     <div class="profile-text">
         <p id='text'>닉네임  <span id="nickname"></span></p>
