--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -44,6 +44,9 @@
     </div>
 </div>
 
+<script>
+    const logoImage = {% static 'logo.png' %}
+</script>
 
 <script src="{% static 'posts/js/detail.js' %}"></script>
 {% endblock content %}
