logo, mainlogo src 2024.06.10

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -14,7 +14,7 @@
         <button type="button" id="delete-button">삭제하기</button>
     </div>
     <div class="post-img">
-        <img id="post-img">
+        <img id="post-img" src = "{% static 'main_logo.png' %}" >
     </div>
     <p id="post-content"></p>
     <div class="post-link">
