--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -37,6 +37,7 @@
 </div>
 
 
+<script> const mainLogoImage = {% static 'main_logo.png' %} </script>
 <script src="{% static 'accounts/js/profile.js' %}"></script>
 
 
