--- a/posts/templates/posts/list.html
+++ b/posts/templates/posts/list.html
@@ -31,5 +31,7 @@
         <button id="nextPage">Next</button>
     </div>
 </div>
+
+<script> const mainLogoImage = {% static 'main_logo.png' %} </script>
 <script src="{% static 'posts/js/list.js' %}"></script>
 {% endblock content %}
