logo, mainlogo src 2024.06.10

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -45,7 +45,8 @@
 </div>
 
 <script>
-    const logoImage = {% static 'logo.png' %}
+    const logoImage = "{% static 'logo.png' %}";
+    window.logoImage = logoImage;
 </script>
 
 <script src="{% static 'posts/js/detail.js' %}"></script>
