--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -37,7 +37,10 @@
 </div>
 
 
-<script> const mainLogoImage = {% static 'main_logo.png' %} </script>
+<script> 
+    const mainLogoImage = "{% static 'main_logo.png' %}" ;
+    window.mainLogoImage = mainLogoImage;
+</script>
 <script src="{% static 'accounts/js/profile.js' %}"></script>
 
 
