--- a/posts/templates/posts/list.html
+++ b/posts/templates/posts/list.html
@@ -2,7 +2,6 @@
 {% load static %}
 {% block content %}
 <link rel="stylesheet" href="{% static "posts/css/list.css" %}">
-
 <div class="post-list">
     <div class="title-search">
         <p>Whatever Song Community</p>
@@ -18,7 +17,7 @@
             <select id="sortSelect">
                 <option value="-created_at">최신순</option>
                 <option value="-like">좋아요순</option>
-            </select>        
+            </select>
         </div>
         <a href="/api/posts/create/">작성하기</a>
     </div>
@@ -26,9 +25,9 @@
         <div class="content" id="postsList"></div>
     </div>
     <div id="paginationControls">
-        <button id="prevPage">Previous</button>
+        <button id="prevPage">◀ Prev</button>
         <span id="pageInfo"></span>
-        <button id="nextPage">Next</button>
+        <button id="nextPage">Next ▶</button>
     </div>
 </div>
 
